--- a/portfolio.html
+++ b/portfolio.html
@@ -94,6 +94,28 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-8">
+                    <div id="liri">
+                        <a href="https://github.com/five3183/LIRI.git" target="_blank">
+                            <img src="assets/images/Billionare_bot.jpg"
+                            style="width:200px;height:150px;">
+                        </a>
+                        <a href="https://github.com/five3183/LIRI.git" target="_blank">
+                            <figure class="tags">LIRI BOT</figure>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-8">
+                    <div id="bamazon">
+                        <a href="https://github.com/five3183/BAMAZON.git" target="_blank">
+                            <img src="assets/images/store.jpg"
+                            style="width:200px;height:150px;">
+                        </a>
+                        <a href="https://github.com/five3183/BAMAZON.git" target="_blank">
+                            <figure class="tags">BAMAZON</figure>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         
