added friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -116,6 +116,17 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-8">
+                    <div id="friendFinder">
+                        <a href="https://gentle-peak-54234.herokuapp.com/" target="_blank">
+                            <img src="assets/images/friends.png"
+                            style="width:200px;height:150px;">
+                        </a>
+                        <a href="https://github.com/five3183/BAMAZON.git" target="_blank">
+                            <figure class="tags">Friend Finder</figure>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         
