--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row navHead">
             <nav class="navbar navbar-default">
                 <div class="col-xs-12 col-sm-3 col-md-3">
-                    <a class="navbar-brand yourName"><strong>Your Name</strong></a>
+                    <a class="navbar-brand yourName"><strong>Matthew Curran</strong></a>
                 </div>
                 <div class="col-sm-6 col-md-6"></div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
@@ -74,7 +74,7 @@
         </div>
         <div class id="row">
             <div class="col-xs-12 col-sm-12 col-md-12 copyright">
-                <span>&#169; COPYRIGHT 2018 Your Name</span>
+                <span>&#169; COPYRIGHT 2018 Matthew Curran</span>
             </div>
         </div>
     </div>
